--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -395,10 +395,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Sostituisci tutto</string>
     <string name="matches">Corrispondenze</string>
     <string name="search_replace_pattern_error_message">Errore di ricerca o sostituzione.</string>
-    <string name="backup_settings">Impostazioni di backup</string>
+    <string name="backup_settings">Backup impostazioni</string>
     <string name="restore_settings">Ripristina impostazioni</string>
     <string name="failed_to_create_backup">Impossibile creare il backup</string>
-    <string name="export_settings_to_json_file">Esporta le impostazioni nel file json</string>
+    <string name="export_settings_to_json_file">Esporta le impostazioni in un file json</string>
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importa le impostazioni dal file json di backup. Al successo, l\'app viene riavviata.</string>
     <string name="failed_to_restore_settings_from_backup">Impossibile ripristinare le impostazioni dal backup</string>
     <string name="newline_is_new_paragraph">Newline = nuovo paragrafo</string>
