--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -27,6 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">Klasör Oluştur</string>
     <string name="create_new_document">Yeni belge oluştur</string>
     <string name="move">Taşı</string>
+    <string name="copy">Kopyala</string>
     <string name="info">Bilgi</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Dosya/dizin zaten var! Lütfen farklı bir ad kullanın</string>
     <string name="import_from_device">Cihazdan içe aktar</string>
@@ -394,6 +395,20 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Tümünü değiştir</string>
     <string name="matches">Eşleşmeler</string>
     <string name="search_replace_pattern_error_message">Desen hatasını arayın veya değiştirin.</string>
+    <string name="backup_settings">Ayarları yedekle</string>
+    <string name="restore_settings">Ayarları geri yükle</string>
+    <string name="failed_to_create_backup">Yedek oluşturma başarısız oldu</string>
+    <string name="export_settings_to_json_file">Ayarları json dosyasına aktar</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Yedek json dosyasından ayarları içe aktarın. Başarılı olursa, uygulama yeniden başlatılır.</string>
+    <string name="failed_to_restore_settings_from_backup">Yedeklemeden ayarlar geri yüklenemedi</string>
     <string name="newline_is_new_paragraph">Yenisatır = yeni paragraf</string>
+    <string name="keep_both">Her ikisini de koru</string>
+    <string name="skip">Atla</string>
+    <string name="overwrite">Üzerine yaz</string>
+    <string name="keep_both_all">İkisini de (tümünü) tut</string>
+    <string name="skip_all">Atla (tümünü)</string>
+    <string name="overwrite_all">Üzerine yaz (tümünün)</string>
+    <string name="copy_move_conflict_message">\'%s\' zaten %s içinde var</string>
     <string name="additional_contexts_and_projects">Ek bağlamlar ve projeler</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">Boşlukla ayrılmış @bağlamları ve +projeleri girin. Bunlar her zaman todo.txt ekleme diyaloglarında görünecektir.</string>
 </resources>
